<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:title="@string/title_info"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_dgns"
        android:icon="@drawable/ic_bug_report_black_24dp"
        android:title="@string/title_dgns"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:title="@string/title_maps"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

</menu>
